--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "proton-mail",
     "productName": "Proton Mail",
-    "version": "0.6.1",
+    "version": "0.7.0",
     "description": "Proton official desktop application for Proton Mail and Proton Calendar",
     "main": ".webpack/main",
     "scripts": {
@@ -13,7 +13,7 @@
         "pretty": "prettier . --write",
         "make-win": "npx electron-forge make",
         "negativity": "electronegativity -i ./src",
-        "create-uninstaller": "npx appify ./src/macos/uninstall.sh './src/macos/Uninstall Proton Mail.app' ./assets/icons/uninstallIcon.icns"
+        "create-uninstaller": "appify ./src/macos/uninstall.sh './src/macos/Uninstall Proton Mail.app' ./assets/icons/macos/uninstallIcon.icns"
     },
     "keywords": [],
     "author": {
@@ -41,6 +41,7 @@
         "eslint": "^8.54.0",
         "eslint-plugin-import": "^2.25.0",
         "fork-ts-checker-webpack-plugin": "^9.0.0",
+        "mac-appify": "^2019.4.13",
         "node-loader": "^2.0.0",
         "prettier": "3.1.0",
         "style-loader": "^3.0.0",
