--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@types/react-dom": "^17.0.24",
         "json5": "^2.2.3",
         "merge": "^2.1.1",
+        "node-gyp": "^10.0.1",
         "rfc2047@^2.0.1": "patch:rfc2047@npm%3A2.0.1#./.yarn/patches/rfc2047-npm-2.0.1-60a2a07c99.patch",
         "safe-buffer": "^5.2.1",
         "terser": "^5.24.0"
