--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
         "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
         "@electron-forge/plugin-webpack": "^7.2.0",
         "@electron-forge/publisher-github": "^7.2.0",
-        "@typescript-eslint/eslint-plugin": "^6.13.1",
-        "@typescript-eslint/parser": "^6.13.1",
+        "@typescript-eslint/eslint-plugin": "^6.13.2",
+        "@typescript-eslint/parser": "^6.13.2",
         "@vercel/webpack-asset-relocator-loader": "1.7.3",
         "css-loader": "^6.8.1",
-        "electron": "27.1.3",
+        "dotenv": "^16.3.1",
+        "electron": "28.0.0",
         "eslint": "^8.55.0",
         "eslint-plugin-import": "^2.29.0",
         "fork-ts-checker-webpack-plugin": "^9.0.2",
