--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
         "start": "electron-forge start",
         "package": "electron-forge package",
         "make": "electron-forge make",
+        "make:beta": "cross-env RELEASE=beta electron-forge make",
         "publish": "electron-forge publish",
         "lint": "eslint --ext .ts,.tsx .",
         "pretty": "prettier . --write",
         "make-win": "npx electron-forge make",
         "negativity": "electronegativity -i ./src",
-        "create-uninstaller": "appify ./src/macos/uninstall.sh './src/macos/Uninstall Proton Mail.app' ./assets/icons/macos/uninstallIcon.icns"
+        "create-uninstaller": "appify ./src/macos/uninstall.sh './src/macos/Uninstall Proton Mail.app' ./assets/icons/uninstaller.png"
     },
     "keywords": [],
     "author": {
-        "name": "Flavien Bonvin",
-        "email": "flavien.bonvin@pm.me"
+        "name": "Proton AG"
     },
     "license": "MIT",
     "devDependencies": {
@@ -36,6 +36,7 @@
         "@typescript-eslint/eslint-plugin": "^6.13.2",
         "@typescript-eslint/parser": "^6.13.2",
         "@vercel/webpack-asset-relocator-loader": "1.7.3",
+        "cross-env": "^7.0.3",
         "css-loader": "^6.8.1",
         "dotenv": "^16.3.1",
         "electron": "28.0.0",
