--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "scripts": {
         "start": "electron-forge start",
         "package": "electron-forge package",
+        "package:beta": "cross-env RELEASE=beta electron-forge package",
         "make": "electron-forge make",
         "make:beta": "cross-env RELEASE=beta electron-forge make",
         "publish": "electron-forge publish",
