--- a/applications/account/package.json
+++ b/applications/account/package.json
@@ -15,9 +15,8 @@
         "lint": "eslint src --ext .js,.ts,.tsx --quiet --cache",
         "pretty": "prettier --write  $(find src/app -type f -name '*.js' -o -name '*.ts' -o -name '*.tsx')",
         "start": "cross-env TS_NODE_PROJECT=\"../../tsconfig.webpack.json\" proton-pack dev-server --appMode=standalone",
-        "test": "jest",
-        "test:ci": "jest --coverage --runInBand --ci",
-        "test:watch": "jest --watch"
+        "test": "jest --coverage --runInBand --ci",
+        "test:dev": "jest --watch"
     },
     "dependencies": {
         "@proton/components": "workspace:packages/components",
