--- a/applications/drive/package.json
+++ b/applications/drive/package.json
@@ -15,9 +15,8 @@
         "lint": "eslint src --ext .js,.ts,.tsx --cache",
         "pretty": "prettier --write  $(find src/app -type f -name '*.js' -o -name '*.ts' -o -name '*.tsx')",
         "start": "cross-env TS_NODE_PROJECT=\"../../tsconfig.webpack.json\" proton-pack dev-server --appMode=standalone",
-        "test": "jest",
-        "test:ci": "jest --coverage=false --runInBand --ci",
-        "test:watch": "jest --watch --coverage=false"
+        "test": "jest --runInBand --ci --coverage=false",
+        "test:dev": "jest --watch --coverage=false"
     },
     "dependencies": {
         "@mattiasbuelens/web-streams-adapter": "0.1.0",
