--- a/applications/pass/package.json
+++ b/applications/pass/package.json
@@ -15,9 +15,7 @@
         "lint": "eslint src --ext .js,.ts,.tsx --cache",
         "pretty": "prettier --write  $(find src/app -type f -name '*.js' -o -name '*.ts' -o -name '*.tsx')",
         "start": "cross-env TS_NODE_PROJECT=\"../../tsconfig.webpack.json\" proton-pack dev-server --appMode=standalone --no-error-logs",
-        "test": "jest",
-        "test:ci": "jest --runInBand --ci --coverage=false --passWithNoTests",
-        "test:watch": "jest --watch"
+        "test": "jest --runInBand --ci --coverage=false --passWithNoTests"
     },
     "dependencies": {
         "@proton/atoms": "workspace:packages/atoms",
