--- a/packages/colors/package.json
+++ b/packages/colors/package.json
@@ -6,9 +6,8 @@
         "check-types": "tsc",
         "generate": "ts-node --skipProject gen-themes-cli",
         "lint": "eslint . --ext ts --quiet --cache",
-        "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-        "test:ci": "NODE_OPTIONS=--experimental-vm-modules jest --coverage --runInBand --ci",
-        "test:watch": "jest --watch"
+        "test": "NODE_OPTIONS=--experimental-vm-modules jest --coverage --runInBand --ci",
+        "test:dev": "jest --watch"
     },
     "dependencies": {
         "@proton/shared": "workspace:^",
