--- a/packages/metrics/package.json
+++ b/packages/metrics/package.json
@@ -5,9 +5,8 @@
         "check-types": "tsc",
         "generate-schema-types": "json2ts -i 'json-schema-registry/observability/client/web*.schema.json' -o types/ --no-additionalProperties",
         "lint": "eslint . --ext ts --quiet --cache",
-        "test": "jest",
-        "test:ci": "jest --coverage --runInBand --ci",
-        "test:watch": "jest --watch",
+        "test": "jest --coverage --runInBand --ci",
+        "test:dev": "jest --watch",
         "update-schema-types": "rimraf json-schema-registry types && git clone $SCHEMA_REPOSITORY && yarn generate-schema-types"
     },
     "dependencies": {
