--- a/packages/pass/package.json
+++ b/packages/pass/package.json
@@ -19,9 +19,7 @@
         "pretty": "prettier --write  $(find src/app -type f -name '*.js' -o -name '*.ts' -o -name '*.tsx')",
         "start": "proton-pack dev-server --appMode=standalone",
         "sync:fathom": "scripts/sync-fathom.sh",
-        "test": "NODE_NO_WARNINGS=1 jest --verbose",
-        "test:ci": "jest --coverage --runInBand --ci",
-        "test:watch": "jest --watch"
+        "test": "NODE_NO_WARNINGS=1 jest --runInBand --ci --verbose"
     },
     "dependencies": {
         "@proton/atoms": "workspace:^",
