--- a/packages/srp/package.json
+++ b/packages/srp/package.json
@@ -9,8 +9,8 @@
         "check-types": "tsc",
         "lint": "eslint lib --ext .ts --quiet --cache",
         "pretty": "prettier --write $(find lib -type f -name '*.ts')",
-        "test": "mocha '**/*.spec.ts'",
-        "test:ci": "yarn test"
+        "test": "jest",
+        "test:ci": "jest --runInBand --ci"
     },
     "dependencies": {
         "@proton/crypto": "workspace:packages/crypto",
@@ -23,8 +23,9 @@
         "@babel/register": "^7.22.15",
         "@proton/eslint-config-proton": "workspace:packages/eslint-config-proton",
         "eslint": "^8.56.0",
-        "mocha": "^10.2.0",
+        "jest": "^29.7.0",
         "prettier": "^3.1.1",
+        "ts-jest": "^29.1.1",
         "typescript": "^5.3.3"
     }
 }
