--- a/packages/srp/tsconfig.json
+++ b/packages/srp/tsconfig.json
@@ -1,6 +1,3 @@
 {
-    "extends": "../../tsconfig.base.json",
-    "compilerOptions": {
-        "types": ["webpack-env"]
-    }
+    "extends": "../../tsconfig.base.json"
 }
