--- a/packages/crypto/package.json
+++ b/packages/crypto/package.json
@@ -21,7 +21,6 @@
         "@proton/eslint-config-proton": "workspace:packages/eslint-config-proton",
         "@types/chai": "^4.3.11",
         "@types/chai-as-promised": "^7.1.8",
-        "@types/mocha": "^10.0.6",
         "chai": "^4.3.10",
         "chai-as-promised": "^7.1.1",
         "eslint": "^8.56.0",
@@ -30,10 +29,8 @@
         "karma": "^6.4.2",
         "karma-chrome-launcher": "^3.2.0",
         "karma-firefox-launcher": "^2.1.2",
-        "karma-mocha": "^2.0.1",
-        "karma-mocha-reporter": "^2.2.5",
+        "karma-jasmine": "^5.1.0",
         "karma-webpack": "^5.0.0",
-        "mocha": "^10.2.0",
         "playwright": "^1.40.1",
         "prettier": "^3.1.1",
         "ts-loader": "^9.5.1",
