--- a/packages/crypto/tsconfig.json
+++ b/packages/crypto/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "extends": "../../tsconfig.base.json",
     "compilerOptions": {
-        "types": ["webpack-env", "mocha"],
+        "types": ["webpack-env", "jasmine"],
         "moduleResolution": "Bundler"
     }
 }
