--- a/packages/pack/package.json
+++ b/packages/pack/package.json
@@ -9,7 +9,7 @@
         "proton-pack": "./bin/protonPack.js"
     },
     "scripts": {
-        "lint": "eslint $(find cli bin -type f) --quiet --cache",
+        "lint": "eslint $(find bin lib webpack -type f) --quiet --cache",
         "pretty": "prettier --write  cli bin"
     },
     "dependencies": {
