Remove ttag patch

--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
         "node-gyp": "^10.0.1",
         "rfc2047@^2.0.1": "patch:rfc2047@npm%3A2.0.1#./.yarn/patches/rfc2047-npm-2.0.1-60a2a07c99.patch",
         "safe-buffer": "^5.2.1",
-        "terser": "^5.26.0",
-        "ttag": "patch:ttag@^1.8.5#~/.yarn/patches/ttag-npm-1.8.5-bf3d560d9a.patch"
+        "terser": "^5.26.0"
     },
     "dependencies": {
         "@proton/eslint-config-proton": "workspace:packages/eslint-config-proton",
